--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Title 5</title>
     <title>Title 6</title>
     <title>First 1</title>
+    <title>First 2</title>
+    <title>First 3</title>
 </head>
 <body>
 
