--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>First 3</title>
     <title>First 4</title>
     <title>Second 1</title>
+    <title>Second 2</title>
 </head>
 <body>
 
